[develop]
script_dir=$base/lib/robot_actuators
[install]
install_scripts=$base/lib/robot_actuators

[options]
packages = find:
install_requires =
    setuptools
zip_safe = false

[options.entry_points]
console_scripts =
    uart_bridge = robot_actuators.uart_bridge:main

[options.data_files]
share/ament_index/resource_index/packages =
    resource/robot_actuators
share/robot_actuators =
    package.xml
share/robot_actuators/launch =
    launch/raspy_bringup.launch.py
